[Chore #160887262] Implement feedback on front-end
- Give functions more descritive names
- Prevent registered users from viewing login and signup page
- Improve the user experience of the app
- Remove only the token when the user logges out

--- a/client/html/userProfile.html
+++ b/client/html/userProfile.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Order-Meal | User-Profile page</title>
-  <script src="./js/checkToken.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./asset/userProfile.css">
@@ -20,7 +19,7 @@
       </div>
       <div id="large-width-nav">
         <a  id="active" href="./userProfile.html">Profile</a>
-        <a href="./orderFoodPage.html">Order</a>
+        <a href="./availableOrders.html">Order</a>
         <a href="./aboutPage.html">About</a>
       </div>
       <div id="nav-menu">
@@ -32,7 +31,7 @@
     </nav>
     <div id="small-width-nav">
       <a href="./userProfile.html">Profile</a>
-      <a href="./orderFoodPage.html">Order</a>
+      <a href="./availableOrders.html">Order</a>
       <a href="./aboutPage.html">About</a>
       <a id="logout" href="./loginPage.html">Logout</a>
     </div>
@@ -114,6 +113,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="./js/helper.js"></script>
   <script src="./js/profilePage.js"></script>
 </body>
 
