[Chore #161141123] Implement feedback given during pitch

--- a/client/html/availableOrders.html
+++ b/client/html/availableOrders.html
@@ -43,7 +43,7 @@
       <div class="container">
         <div id="ordered-meal-text">
           <h3>meals available | 0 </h3>
-          <h3 id="add-order">Create Order</h3>
+          <h3 id="add-order">Place Order</h3>
         </div>
         <section id="loading">
           <div id="loader-container">
