--- a/client/html/signupPage.html
+++ b/client/html/signupPage.html
@@ -24,7 +24,7 @@
         <div id="header-text">
           <h1>Welcome to the O-meal App.</h1>
         </div>
-        <section id="sucess-error-response">
+        <section id="success-error-response">
           <div id="response-container">
             <p>status message</p>
           </div>
@@ -36,7 +36,7 @@
             <input type="password" id="password" placeholder="password">
             <input type="email" id="email" placeholder="email">
             <button id="signup-button" type="submit">Signup</button>
-            <h3 id="login">Do you an account? <a href="./loginPage.html">Login</a></h3>
+            <h3 id="login">Do you have an account? <a href="./loginPage.html">Login</a></h3>
           </form>
         </div>
       </div>
