[Feature #161141833] Enable user place an order
- Implement place-order feature
- Fix bug in user profile page
- Connect front-end with apropriate API end-point

--- a/client/html/userProfile.html
+++ b/client/html/userProfile.html
@@ -24,7 +24,7 @@
         <a href="./aboutPage.html">About</a>
       </div>
       <div id="nav-menu">
-        <a id="logout" href="./loginPage.html">Logout</a>
+        <a class="logout" href="#">Logout</a>
         <span id="hamburger">
           <i class="fas fa-bars fa-2x"></i>
         </span>
@@ -34,7 +34,7 @@
       <a href="./userProfile.html">Profile</a>
       <a href="./availableOrders.html">Order</a>
       <a href="./aboutPage.html">About</a>
-      <a id="logout" href="./loginPage.html">Logout</a>
+      <a class="logout" href="#">Logout</a>
     </div>
   </header>
   <main>
