--- a/client/html/availableOrders.html
+++ b/client/html/availableOrders.html
@@ -29,7 +29,7 @@
           <input type="text" id="search-meal" placeholder="Search available meals">
           <span id="search-meal-icon"><i class="fas fa-search"></i></span>
           <select id="filter">
-            <option value="">fiter searh</option>
+            <option value="">filter search</option>
             <option value="Meal">Meal</option>
             <option value="Appetizer">Appetizer</option>
             <option value="Drink">Refreshment</option>
@@ -76,21 +76,26 @@
     <section id="addOrder-modal-container">
       <div id="modal-container">
         <div id="modal-content">
-          <div id="close-container">
-            <span id="close-modal">&times;</span>
-          </div>
           <div id="success-error-response">
             <div id="response-container">
               <p></p>
             </div>
           </div>
-          <form id="menu-content">
-            <input type="text" name="" id="modal-meal-type" placeholder="meal type">
-            <input type="text" name="" id="modal-meal" placeholder="meal">
-            <input type="text" name="" id="modal-prize" placeholder="prize">
-            <button type="button" id='create-meal'>Create meal</button>
-            <button type="button" id='cancel-meal'>Cancel creation</button>
-          </form>
+          <div id="meals-ordered-container">
+            <div id="meals-ordered"></div>
+            <div id="no-meal-in-cart">
+              <p>You have not selected any meals to order yet. Click the
+                cancel button to go back and select a meal.</p>
+            </div>
+            <div id="contact-user">
+              <p>Where do you want your order sent to?</p>
+              <input type="text" id="address">
+              <p>Phone number</p>
+              <input type="number" id="phone-number">
+            </div>
+            <button type="button" id='place-order'>Place Order</button>
+            <button type="button" id='cancel-order'>Cancel Order</button>
+          </div>
         </div>
       </div>
     </section>
