[Feature #161198754] Update schema on orders table
- Add more columns and new data types to the orders table
- Improve UX of the order meal page so as to make ordering for a meal seamless
- Created an helper file to house helper functions for availableMenu.js file
- Consume apropriate end-ponts needed to update the data of the order-meal page
- Wrote tests for the new features

--- a/client/html/availableOrders.html
+++ b/client/html/availableOrders.html
@@ -81,6 +81,10 @@
               <p></p>
             </div>
           </div>
+          <div id="loader-container-modal">
+            <div id="loader-modal"></div>
+            <h3>loading...</h3>
+          </div>
           <div id="meals-ordered-container">
             <div id="meals-ordered"></div>
             <div id="no-meal-in-cart">
@@ -91,7 +95,7 @@
               <p>Where do you want your order sent to?</p>
               <input type="text" id="address">
               <p>Phone number</p>
-              <input type="number" id="phone-number">
+              <input type="number" id="phone-number" maxlength="13">
             </div>
             <button type="button" id='place-order'>Place Order</button>
             <button type="button" id='cancel-order'>Cancel Order</button>
@@ -106,6 +110,7 @@
     </div>
   </footer>
   <script src="./js/helper.js"></script>
+  <script src="./js/menuPageHelper.js"></script>
   <script src="./js/availableOrders.js"></script>
 </body>
 
