--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -47,6 +47,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="../js/verifyToken.js"></script>
   <script src="../js/helper.js"></script>
   <script src="../js/loginPage.js"></script>
 </body>
