[Feature #161503120] Update status of an order

--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -5,10 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="../js/checkIfNotReg.js"></script>
+  <script src="./js/checkIfNotReg.js"></script>
   <title>Order-Meal | Login Page</title>
   <link rel="stylesheet" href="./asset/loginPage.css">
-  <link rel="stylesheet" href="../css/loginPage.css">
 </head>
 
 <body>
@@ -47,9 +46,9 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
-  <script src="../js/verifyToken.js"></script>
-  <script src="../js/helper.js"></script>
-  <script src="../js/loginPage.js"></script>
+  <script src="./js/verifyToken.js"></script>
+  <script src="./js/helper.js"></script>
+  <script src="./js/loginPage.js"></script>
 </body>
 
 </html>
